--- a/config/alfresco/web-extension/site-webscripts/org/alfresco/components/footer/footer.get.properties
+++ b/config/alfresco/web-extension/site-webscripts/org/alfresco/components/footer/footer.get.properties
@@ -1,2 +1,2 @@
-label.copyright=EisenVault &copy; 2015 All rights reserved.
-label.copyright.enterprise=EisenVault &copy; 2015 All rights reserved.
+label.copyright=Argali Pvt Solutions &copy; 2015 All rights reserved.
+label.copyright.enterprise=Argali Pvt Solutions &copy; 2015 All rights reserved.
