--- a/config/alfresco/messages/slingshot.properties
+++ b/config/alfresco/messages/slingshot.properties
@@ -133,7 +133,7 @@ label.empty=(Empty)
 label.about=About
 label.username=User Name
 label.password=Password
-label.copyright=&copy; 2015 EisenVault. All rights reserved.
+label.copyright=&copy; 2015 Argali Pvt Solutions. All rights reserved.
 label.name=Name
 label.title=Title
 label.description=Description
